# blocktran

./: .appveyor.yml  .gdbinit  .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  CMakePresets.json  Makefile  README.md  README.rst  azure-pipelines.yml  block_init.f90  blocks.f90  blocks.f95  build.py  cinter.c  cinter.f90  cinter_legacy.f90  codemeta.json  err.f90  err_legacy.f90  ford.md  fpm.toml  index.html  keys.f90  keytest.f90  main.f90  main.f95  main_future.f90  main_legacy.f90  menu.f90  meson.build  meson_options.txt  options.cmake  rand.f90  requirements.txt  search.html  setup.cmake  test_compilers.sh  test_key.f90  (+1 more)
.archive/: test_compilers.sh
.github/workflows/: ci.yml  ci_cmake.yml  ci_meson.yml
app/: main.f90
archive/: .appveyor.yml
cmake/: .cpack_ignore  compilers.cmake  config.cmake.in  curses.cmake  curses_external.cmake  install.cmake  meson.build  options.cmake  x11.cmake
cmake/Modules/: FindCurses.cmake
cmake/abi_check/: CMakeLists.txt  abi_check.h  addtwo.cpp  main.c  main.f90
docs/interface/: cbreak.html  endwin.html  f_initscr.html  flushinp.html  getch.html  mean.html  mvaddch.html  mvprintw.html  noecho.html  refresh.html
docs/lists/: modules.html
docs/module/: ai.html  blocks.html  keys.html  random.html  rand~2.html  shapes.html
docs/proc/: ai_input.html  diff.html  dissolve.html  draw_piece.html  flipud.html  gen_type.html  height.html  hit_floor.html  horizflip.html  init_block.html  initial.html  key_input.html  left_wall.html  main.html  mean_int.html  move_down.html  print_block.html  random_init.html  rot90.html  rotate.html  seek_deep.html  setup.html  std_int.html  title.html
docs/program/: test_key.html  test_menu.html  testshapes.html
docs/sourcefile/: blocks.f90.html  keys.f90.html  main.f90.html  menu.f90.html  rand.f90.html  rand_legacy.f90.html  random.f90.html  randtest.f90.html  test_motion.f90.html  test_shapes.f90.html
docs/src/: ai.f90  blocks.f90  err.F90  fields.f90  menu.f90  rand.f90  random.f90  test_motion.f90  test_shapes.f90
docs/tipuesearch/: tipuesearch_content.js
docs/type/: field.html
interface/: addone.html  border.html  cbreak.html  clear.html  endwin.html  f_addch.html  f_initscr.html  flushinp.html  getch.html  getmaxyx.html  kbhit.html  keypad.html  mean.html  mvaddch.html  mvprintw.html  nodelay.html  noecho.html  printw.html  refresh.html  std.html  timeout.html  usleep.html  winsleep.html
lists/: files.html  modules.html  procedures.html  programs.html  types.html
module/: ai.html  blocks.html  cinter.html  errs.html  fields.html  game.html  keys.html  menu.html  oscinter.html  oscinter~2.html  rand.html  random.html  rotflip.html  shapes.html  sleep_std.html
proc/: addch.html  ai_input.html  block_hit.html  check_collision.html  check_x.html  clear_lines.html  cmd_parse.html  diff.html  dissolve.html  dissolver.html  down_random.html  draw_piece.html  draw_score.html  draw_screen.html  err.html  err~2.html  flip.html  fliplr.html  flipud.html  freeze.html  game_over.html  gen_type.html  height.html  hit_block.html  hit_floor.html  hit_horiz.html  horizflip.html  init_block.html  initial.html  initscr.html  kbhit.html  key_input.html  left_wall.html  levelup.html  main_game.html  mainsub.html  makeletter.html  mean_int.html  mean_real.html  move_down.html  (+24 more)
program/: adder.html  blocktran.html  keytest.html  motiontest.html  rand_test.html  randblock.html  test_curses.html  test_menu.html  test_motion.html  test_shapes.html  tetran.html
sourcefile/: ai.f90.html  blocks.f90.html  cinter.f90.html  err.f90.html  fields.f90.html  game.f90.html  keys.f90.html  keytest.f90.html  main.f90.html  main.f90~2.html  menu.f90.html  random.in.f90.html  randtest.f90.html  rot90.f90.html  shapes.f90.html  sleep_std.f90.html  test_curses.f90.html  test_menu.f90.html  test_motion.f90.html  test_shapes.f90.html  unixcinter.f90.html  wincinter.f90.html
src/: CMakeLists.txt  ai.f90  block_init.f90  blocks.f90  cinter.c  cinter.f90  cinter_unix.f90  cinter_win.f90  csleep.h  err.F90  err.f90  err_legacy.f90  fields.f90  game.f90  getch.c  keys.f90  keytest.f90  main.f90  menu.f90  meson.build  rand.f90  rand_legacy.f90  random.f90  random.in.f90  random_init.f90  randtest.f90  rot90.f90  shapes.f90  sleep.c  sleep.cpp  sleep.f90  test_curses.f90  unixcinter.f90  wincinter.f90
src/tests/: CMakeLists.txt  keytest.f90  meson.build  randtest.f90  test_curses.f90  test_menu.f90  test_menu.sh  test_motion.f90  test_shapes.f90
subprojects/: pdcurses.wrap
test/: CMakeLists.txt  keytest.f90  randtest.f90  test_curses.f90  test_menu.f90  test_motion.f90  test_shapes.f90
tests/: CMakeLists.txt  keytest.f90  randtest.f90  test.py  test_compilers.sh  test_menu.f90  test_motion.f90  test_shapes.f90
tipuesearch/: tipuesearch_content.js
type/: field.html  piece.html
